crates/rskim-core/tests/snapshots/truncation_golden__ts_simple_structure_max15.snap
---
source: crates/rskim-core/tests/truncation_golden.rs
expression: "snap(TS_SIMPLE, Language::TypeScript,\nTransformConfig::with_mode(Mode::Structure).with_max_lines(15))"
---
/**
 * FIXTURE: Simple TypeScript functions
 * TESTS: Basic function signature extraction
 */

export function add(a: number, b: number): number  {...}

export function greet(name: string): string  {...}
