crates/rskim-core/tests/snapshots/truncation_golden__ts_simple_structure_max5.snap
---
source: crates/rskim-core/tests/truncation_golden.rs
expression: "snap(TS_SIMPLE, Language::TypeScript,\nTransformConfig::with_mode(Mode::Structure).with_max_lines(5))"
---
// ... (5 lines truncated)
export function add(a: number, b: number): number  {...}
// ... (3 lines truncated)
export function greet(name: string): string  {...}
