crates/rskim-core/tests/snapshots/truncation_golden__ts_simple_types_unbounded.snap
---
source: crates/rskim-core/tests/truncation_golden.rs
expression: "snap(TS_SIMPLE, Language::TypeScript, TransformConfig::with_mode(Mode::Types))"
---

